fixed an issue where scrollbar is on top of modal

--- a/develop/app_iig/sass/modules/_modal.scss
+++ b/develop/app_iig/sass/modules/_modal.scss
@@ -1,4 +1,7 @@
-
+// override to fix scrollbar overlaid on top of modal
+.modal {
+	position: absolute;
+}
 // flattened
 .modal-dialog {
 	box-shadow: 0 1px 10px rgba(0, 0, 0, 0.5);
